# copper-rs

./: Cargo.toml  sitemap.xml
api/: help.html  index.html  settings.html
api/cu29/: all.html  constant.COMPACT_STRING_CAPACITY.html  enum.UnifiedLogType.html  fn.read_configuration.html  fn.with_cause.html  index.html  macro.bundle_resources.html  macro.defmt_debug.html  macro.defmt_error.html  macro.defmt_info.html  macro.defmt_warn.html  macro.input_msg.html  macro.output_msg.html  macro.resources.html  macro.rx_channels.html  macro.tx_channels.html  struct.CuCompactString.html  struct.CuError.html  trait.CopperListTuple.html  trait.CuMsgMetadataTrait.html  trait.CuPayloadRawBytes.html  trait.ErasedCuStampedData.html  trait.ErasedCuStampedDataSet.html  trait.MatchingTasks.html  trait.Metadata.html  trait.PayloadSchemas.html  trait.WriteStream.html  type.CuResult.html
api/cu29_clock/: all.html  enum.Tov.html  fn.busy_wait_for.html  fn.busy_wait_until.html  fn.initialize.html  fn.read_raw_counter.html  index.html  struct.CuDuration.html  struct.CuInstant.html  struct.CuTimeRange.html  struct.OptionCuTime.html  struct.PartialCuTimeRange.html  struct.RobotClock.html  struct.RobotClockMock.html  trait.ClockProvider.html  trait.SaturatingSub.html  type.CuTime.html  type.Instant.html
api/cu29_derive/: all.html  attr.copper_runtime.html  index.html  macro.bundle_resources.html  macro.gen_cumsgs.html  macro.resources.html
api/cu29_export/: all.html  enum.Command.html  enum.ExportFormat.html  fn.copperlists_reader.html  fn.keyframes_reader.html  fn.run_cli.html  fn.structlog_reader.html  fn.textlog_dump.html  index.html  struct.LogReaderCli.html
api/cu29_intern_strs/: all.html  fn.default_log_index_dir.html  fn.intern_string.html  fn.read_interned_strings.html  fn.record_callsite.html  index.html
api/cu29_log/: all.html  constant.ANONYMOUS.html  constant.MAX_LOG_PARAMS_ON_STACK.html  enum.CuLogLevel.html  fn.format_logline.html  fn.rebuild_logline.html  index.html  macro.__cu29_defmt_debug.html  macro.__cu29_defmt_error.html  macro.__cu29_defmt_info.html  macro.__cu29_defmt_warn.html  macro.defmt_debug.html  macro.defmt_error.html  macro.defmt_info.html  macro.defmt_warn.html  struct.CuLogEntry.html
api/cu29_log_derive/: all.html  index.html  macro.critical.html  macro.debug.html  macro.error.html  macro.info.html  macro.intern.html  macro.warning.html
api/cu29_log_runtime/: all.html  fn.format_message_only.html  fn.log.html  fn.log_debug_mode.html  fn.register_live_log_listener.html  fn.structured_log_bytes_total.html  fn.unregister_live_log_listener.html  index.html  struct.LoggerRuntime.html  struct.NullLog.html  struct.OwningIoWriter.html  struct.SimpleFileWriter.html  type.LiveLogListener.html
api/cu29_rendercfg/: all.html  constant.BACKGROUND_COLOR.html  constant.BACK_EDGE_DUP_SPACING.html  constant.BACK_EDGE_NODE_GAP.html  constant.BACK_EDGE_SPAN_EPS.html  constant.BACK_EDGE_STACK_SPACING.html  constant.BORDER_COLOR.html  constant.BOX_SHAPE_PADDING.html  constant.BRIDGE_HEADER_BG.html  constant.CELL_LINE_SPACING.html  constant.CELL_PADDING.html  constant.CLUSTER_COLOR.html  constant.CLUSTER_MARGIN.html  constant.COMPACT_STRING_CAPACITY.html  constant.CONFIG_FONT_SIZE.html  constant.CONFIG_WRAP_WIDTH.html  constant.COPPER_GITHUB_URL.html  constant.COPPER_LINK_COLOR.html  constant.COPPER_LOGO_SVG.html  constant.DETOUR_LABEL_CLEARANCE.html  constant.DIM_GRAY.html  constant.EDGE_COLOR_ORDER.html  constant.EDGE_COLOR_PALETTE.html  constant.EDGE_FONT_SIZE.html  constant.EDGE_HITBOX_OPACITY.html  constant.EDGE_HITBOX_STROKE_WIDTH.html  constant.EDGE_HOVER_POINT_RADIUS.html  constant.EDGE_HOVER_POINT_STROKE_WIDTH.html  constant.EDGE_LABEL_FIT_RATIO.html  constant.EDGE_LABEL_HALO_WIDTH.html  constant.EDGE_LABEL_LIGHTEN.html  constant.EDGE_LABEL_OFFSET.html  constant.EDGE_PORT_HANDLE.html  constant.EDGE_STUB_LEN.html  constant.EDGE_STUB_MIN.html  constant.EDGE_TOOLTIP_CSS.html  constant.FONT_FAMILY.html  constant.FONT_SIZE.html  constant.GRAPH_MARGIN.html  (+216 more)
apriltag-rust/: Cargo.toml
components/tasks/cu_apriltag/: Cargo.toml
components/tasks/cu_apriltag/src/: distortion.rs  lib.rs
components/tasks/cu_apriltag/tests/data/: realsense2_intrinsics.ron
examples/cu_multi_output/: Cargo.toml
tui-nodes/: Cargo.toml
(+2564 files in other folders)
