[package]
name = "cu-multi-output"
description = "Example demonstrating multi-output tasks."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

publish = false

[dependencies]
<<<<<<<< HEAD:components/sources/cu_iceoryx2_src/Cargo.toml
iceoryx2 = { version = "0.8.0" }
========
>>>>>>>> 66c408a3fb7cf7a9063dcec449a017e6a570c2eb:examples/cu_multi_output/Cargo.toml
cu29 = { workspace = true }
cu29-helpers = { workspace = true }
tempfile = { workspace = true }
serde = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["serde"]
