[package]
name = "cu-apriltag"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
description = "AprilTag detection and pose for Copper"

[features]
apriltag-deps = ["apriltag", "apriltag-nalgebra", "apriltag-sys"]
default = ["apriltag-deps"]
sim = []
resim = []


[dependencies]
bincode = { workspace = true }
cu29 = { workspace = true }
serde = { workspace = true }
arrayvec = "0.7.6"
jpeg-decoder = "0.3.0"
crossbeam = "0.8.4"

cu-spatial-payloads = { path = "../../payloads/cu_spatial_payloads", version = "0.9.0", features = [
    "nalgebra",
] }
cu-sensor-payloads = { path = "../../payloads/cu_sensor_payloads", version = "0.9.0" }

[target.'cfg(all(target_os = "linux", not(any(feature = "sim", feature = "resim"))))'.dependencies]
apriltag = { path = "../../../apriltag-rust/apriltag", optional = true }
apriltag-nalgebra = { path = "../../../apriltag-rust/apriltag-nalgebra", optional = true }
apriltag-sys = { path = "../../../apriltag-rust/apriltag-sys", optional = true }

[dev-dependencies]
image = "0.25.6"
anyhow = "1.0.98"
