[package]
name = "cu-apriltag"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
description = "AprilTag detection and pose for Copper"

[features]
hardware = ["apriltag", "apriltag-nalgebra", "apriltag-sys"]
sim = []
resim = []


[dependencies]
bincode = { workspace = true }
cu29 = { workspace = true }
serde = { workspace = true }
arrayvec = "0.7.6"
cu-spatial-payloads = { path = "../../payloads/cu_spatial_payloads", version = "0.12.0" }
cu-sensor-payloads = { path = "../../payloads/cu_sensor_payloads", version = "0.12.0" }

[target.'cfg(target_os = "linux")'.dependencies]
apriltag = { path = "../../../apriltag-rust/apriltag", optional = true }
apriltag-nalgebra = { path = "../../../apriltag-rust/apriltag-nalgebra", optional = true }
apriltag-sys = { path = "../../../apriltag-rust/apriltag-sys", optional = true }

[dev-dependencies]
image = { version = "0.25.6", default-features = false, features = ["png"] }
anyhow = "1.0.98"
